[package]
name = "yoursunny_summer_host_storage"
version = "0.0.0"
edition = "2024"

[dependencies]
clap = { version = "^4.5.53", features = ["derive"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
url = "^2.5.7"
