[package]
name = "yoursunny_summer_host_storage"
version = "0.0.0"
edition = "2024"

[dependencies]
axum = "^0.8.8"
bytes = "^1.11.0"
clap = { version = "^4.5.53", features = ["derive"] }
tokio = { version = "^1.48.0", features = ["full"] }
url = "^2.5.7"

[dev-dependencies]
http-body-util = "^0.1.0"
tower = { version = "^0.5.2", features = ["util"] }
