[package]
name = "yoursunny_summer_host_storage"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "^1.0.100"
axum = "^0.8.8"
axum-extra = { version = "^0.12.5", features = ["async-read-body"] }
bpaf = { version = "^0.9.22", features = ["derive"] }
bytes = "^1.11.0"
futures-util = "^0.3"
tokio = { version = "^1.48.0", features = ["full"] }
tokio-util = { version = "^0.7", features = ["io"] }
url = "^2.5.7"

[dev-dependencies]
http-body-util = "^0.1.0"
tower = { version = "^0.5.2", features = ["util"] }
